adding functionality for sign up with bcrypt password hashing
