# src/models/sign-up.ts
@@ -1,0 +1,6 @@
+export interface CreateUserRequestBody {
+    username: string;
+    profile_pic: string;
+    password: string;
+    email: string;
+}
